k3s-deploy/hyperion-stack-deploy/gateway-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-gateway
spec:
  type: ClusterIP
  selector:
    app: spring-gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
